trying to tarball rstanarm

--- a/chapter-19.ipynb
+++ b/chapter-19.ipynb
@@ -147,11 +147,11 @@
     "\n",
     "Also note that in order to find this standardized b estimate, we have to z-score BOTH the predictor and the outcome. If we only z-scored the predictor and not the outcome, the meaning of the b estimate would be \"change in years of education for every 1 SD increase in father's education.\" It would be a sort of half-standardized effect estimate, but we want a fully standardized one in order to compare effect sizes between different analyses and studies. \n",
     "\n",
-    "Another way to convert between unstandardized and standardized bs is to use the following formula:\n",
+    "Another way to convert between unstandardized and standardized bs in the context of simple regression is to use the following formula:\n",
     "\n",
-    "$$b = \\beta * \\frac{sd(Y)}{sd(X)}$$\n",
+    "$$\\beta = b * \\frac{sd(X)}{sd(Y)}$$\n",
     "\n",
-    "where b is the unstandardized b, and &beta; \n",
+    "where b is the unstandardized b, and &beta; is the standardized b. \n",
     "\n",
     "When talking about standardized vs. unstandardizes model coefficients, because they are different numeric values, make sure you are being explicit about which one you are using. "
    ]
