ch21 typo in image

--- a/chapter-22.ipynb
+++ b/chapter-22.ipynb
@@ -56,7 +56,7 @@
     "\n",
     "Clearly, the traditional way of doing research was failing us. Statistics based on QRPs and the incentives of hunting for anything that was significant lead to a majority of research being unreplicable, which stalls progress and wastes billions of dollars in research funding. It was time for a better way of doing research. \n",
     "\n",
-    "In the decade since, the field has been evolving. Different statistical standards are being debated, and problematic practices are diminishing. There is still a ways to go to figure out what the best practices are, but in the mean time we have learned which practices are definitely harmful. In this chapter, we will discuss 8 of these \"statistical sins\" so that you know to avoid them in your own research, and to be sensitive to their use in research that you review. "
+    "In the decade since, the field has been evolving. Different statistical standards are being debated, and problematic practices are diminishing. There is still a ways to go to figure out what the best practices are, but in the mean time we have learned which practices are definitely harmful. In this chapter, we will discuss some of these \"statistical sins\" so that you know to avoid them in your own research, and to be sensitive to their use in research that you review. "
    ]
   },
   {
@@ -94,7 +94,24 @@
     "\n",
     "<img src=\"images/ch22-phack3.png\" width=\"1000\">\n",
     "\n",
-    "Alternatives to p-hacking:\n",
+    "- Focus on p-hacking, but Bayesian approaches aren't immune - slicing up data until a certain size effect or Bayes Factor is found. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a193cb6",
+   "metadata": {},
+   "source": [
+    "## 22.3 HARKing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "418965ca",
+   "metadata": {},
+   "source": [
+    "## 22.4 Alternatives to p-hacking and HARKing\n",
+    "\n",
     "- pre-register a specific hypothesis\n",
     "- control Type I error rate with multiple comparison correction\n",
     "- multiverse analysis"
@@ -102,17 +119,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a4d83b3",
+   "id": "f77e4756",
    "metadata": {},
    "source": [
-    "- 1) Garden of forking paths (different IV/DV variables, variable transformations, controlling, preferrable outlier exclusion, composite score redefinition, different model types, NA imputation, subgroup analysis) – basically deciding what model is good based on running a bunch of models and reporting the best one\n",
-    "- 2) HARKing\n",
+    "## 22.5 How to detect QRPs in research"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd11cd88",
+   "metadata": {},
+   "source": [
+    "## 22.6 Other sins\n",
+    "\n",
     "- 3) Violations of linear model assumptions \n",
-    "- 4) Difference in conditions without comparing them directly\n",
-    "- 5) Small samples\n",
-    "- 6) Over-interpreting non-significant results\n",
-    "- 7) Correlation vs. causation\n",
-    "- 8) Misleading visualization"
+    "- 4) Binning/dichotomizing\n",
+    "- No multiple comparison correction\n",
+    "- 5) Difference in conditions without comparing them directly\n",
+    "- 6) Small samples\n",
+    "- 7) Over-interpreting non-significant results\n",
+    "- 8) Correlation vs. causation, \n",
+    "- 9) Extrapolation\n",
+    "- 10) Misleading visualization"
    ]
   }
  ],
