fix error in conclusion about representativeness bias in ch20

--- a/chapter-20.ipynb
+++ b/chapter-20.ipynb
@@ -344,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6263c7b1",
+   "id": "a8a6a386",
    "metadata": {
     "scrolled": false
    },
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f13f75df",
+   "id": "69d0884a",
    "metadata": {},
    "source": [
     "Any one sample may find a b<sub>1</sub> estimate that is larger or smaller than 0.3, but in general they will cluster around 0.3.\n",
@@ -382,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32f9d1b6",
+   "id": "d36db885",
    "metadata": {
     "scrolled": true
    },
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d31a2fd1",
+   "id": "ad744b58",
    "metadata": {},
    "source": [
     "The true relationship between x and y is 0.3, but by truncating the y variable, our sampling distribution is biased downward. \n",
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "820397ed",
+   "id": "9c5c72d7",
    "metadata": {
     "scrolled": true
    },
@@ -443,7 +443,7 @@
     "b1s <- vector(length=1000)\n",
     "for (i in 1:1000) {\n",
     "    sim_sample <- sample_n(high_sim_df, size=100, replace=TRUE) \n",
-    "    sim_model <- lm(y ~ x, data = sim_sample)  #fitting a linear model instead of nonlinear\n",
+    "    sim_model <- lm(y ~ x, data = sim_sample)\n",
     "    b1s[i] <- sim_model$coefficients[[2]]\n",
     "}\n",
     "\n",
@@ -455,10 +455,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f45cbc6",
+   "id": "7dccbe73",
    "metadata": {},
    "source": [
-    "On average, the sampling distribution will still cluster around an effect of 0.3 for x. The difference here is that the sampling distribution is *wider*, despite having the same sample size. It isn't the model coefficient that is biased in this case, but the *standard error* is biased to be too big. On average we will detect the right effect, but it will be harder to get an accurate picture of it. If the true effect is 0.3, we will find small nonsignificant effects more often than we planned for. In addition, if the true effect is 0, we will find large false positive effects more often than we planned for. We will commit more Type I AND Type II errors.\n",
+    "On average, the sampling distribution will still cluster around an effect of 0.3 for x. The difference here is that the sampling distribution is *wider*, despite having the same sample size. It isn't the model coefficient that is biased in this case, but the *standard error* is biased to be too big. On average we will detect the right effect, but it will be harder to get an accurate picture of it. If the true effect is 0.3 but standard error is biased upward, we will have less power than we planned to find that effect significant - there will be more Type II errors. \n",
     "\n",
     "<img src=\"images/ch20-selectionx.gif\" width=\"500\">\n",
     "\n",
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af5713be",
+   "id": "da115e75",
    "metadata": {},
    "source": [
     "### How to check for assumption\n",
