fix effect size typo in ch19

--- a/chapter-19.ipynb
+++ b/chapter-19.ipynb
@@ -425,7 +425,7 @@
     "\n",
     "If you know three of these values, you can compute the fourth. \n",
     "\n",
-    "One version of power planning is called **sensitivity analysis**. It asks, given a chosen Type I error rate and sample size, what is the biggest effect size you are well-powered to find.\n",
+    "One version of power planning is called **sensitivity analysis**. It asks, given a chosen Type I error rate and sample size, what is the smallest effect size you are well-powered to find.\n",
     "\n",
     "A good tool for doing power planning is the ```pwr``` package in R. With it, you can enter three of the four values above, and it will tell you the fourth. Let's use the ```pwr.r.test()``` function in that package for an analysis where we plan to find a correlation between two variables. This function has four arguments: \n",
     "\n",
@@ -436,7 +436,7 @@
     "\n",
     "To use this function, three out of four of these arguments must be set with a value, and the fourth one assigned a value of ```NULL```. Whichever value is set to ```NULL``` will be computed based on the other three. \n",
     "\n",
-    "If we use a Type I error rate of 5%, a sample size of 50, and want to have at least 80% power (the modern standard of power for research studies), what is the biggest r correlation that we will have an 80% chance of finding? "
+    "If we use a Type I error rate of 5%, a sample size of 50, and want to have at least 80% power (the modern standard of power for research studies), what is the smallest r correlation that we will have an 80% chance of finding? "
    ]
   },
   {
