change to tetris memories example data

--- a/chapter-4.ipynb
+++ b/chapter-4.ipynb
@@ -23,29 +23,86 @@
     "\n",
     "So far we have worked with one variable at a time, which is easy to visualize and understand simply by printing its vector. However, most real-world data has many variables stored at once. To manage this, it is necessary to organize and format data so that they are easy to analyze using statistical software. There is no one way to organize data, but there is a way that is most common, and that is what we recommend you use.\n",
     "\n",
-    "This common way is called a **dataframe**. Under this framework, data are stored into rectangular tables, with rows and columns. What goes on each row and column follows two principles:\n",
+    "This common way is called a **data frame**. Under this framework, data are stored into rectangular tables, with rows and columns. What goes on each row and column follows four principles:\n",
     "\n",
     "- Each column is a variable\n",
-    "- Each row is an observation (or, we have been calling it a case or an object to which a measure is attached)\n",
+    "- Each row is an observation \n",
     "- The first row contains the names of all the variables\n",
     "- The data within a dataframe are from the same dataset\n",
     "\n",
-    "Rectangular tables of this sort are represented in R using new data type - conveniently, called a dataframe. The columns are the variables; this is where the results of measures are kept. The rows are the cases sampled. Each value of different variables that are on the same row belong to the same observation (e.g., the same person, zip code, habitat, etc.) Data frames provide a way to save information such as column headings (i.e., variable names) in the same table as the actual data values.\n",
+    "Rectangular tables of this sort are represented in R using a new data type - conveniently, called a data frame. The columns are the variables; this is where the results of measures are kept. The rows are the cases sampled. Each value of different variables that are on the same row belong to the same observation (e.g., the same person, zip code, habitat, etc.) Data frames provide a way to save information such as column headings (i.e., variable names) in the same table as the actual data values.\n",
     "\n",
     "Principle 4 above simply states that the types of observations that form the rows cannot be mixed within a single table. So, for example, you wouldn’t have rows of college students intermixed with rows of cars or countries or couples. If you have a mix of observation types (e.g., students, families, countries), they each go in a different dataframe.\n",
     "\n",
-    "## 4.2 Creating a dataframe\n",
+    "## 4.2 Creating a data frame\n",
     "\n",
     "### Combining vectors\n",
-    "Let's say we have two vectors, ```x1 <- c(1,2,3,4,5)``` and ```x2 <- c(18,21,20,23,20)```. We can combine these together into a dataframe using the ```data.frame()``` function."
+    "Let's see how we create and work with data frames in R. Say we have two vectors, ```x1 <- c(1,2,3,4,5)``` and ```x2 <- c(18,21,20,23,20)```. We can combine these together into a dataframe using the ```data.frame()``` function."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0ae6a733",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.frame: 5 × 2</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>x1</th><th scope=col>x2</th></tr>\n",
+       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>1</td><td>18</td></tr>\n",
+       "\t<tr><td>2</td><td>21</td></tr>\n",
+       "\t<tr><td>3</td><td>20</td></tr>\n",
+       "\t<tr><td>4</td><td>23</td></tr>\n",
+       "\t<tr><td>5</td><td>20</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.frame: 5 × 2\n",
+       "\\begin{tabular}{ll}\n",
+       " x1 & x2\\\\\n",
+       " <dbl> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t 1 & 18\\\\\n",
+       "\t 2 & 21\\\\\n",
+       "\t 3 & 20\\\\\n",
+       "\t 4 & 23\\\\\n",
+       "\t 5 & 20\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.frame: 5 × 2\n",
+       "\n",
+       "| x1 &lt;dbl&gt; | x2 &lt;dbl&gt; |\n",
+       "|---|---|\n",
+       "| 1 | 18 |\n",
+       "| 2 | 21 |\n",
+       "| 3 | 20 |\n",
+       "| 4 | 23 |\n",
+       "| 5 | 20 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  x1 x2\n",
+       "1 1  18\n",
+       "2 2  21\n",
+       "3 3  20\n",
+       "4 4  23\n",
+       "5 5  20"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "x1 <- c(1,2,3,4,5)\n",
     "x2 <- c(18,21,20,23,20)\n",
@@ -57,17 +114,78 @@
    "id": "97f37a79",
    "metadata": {},
    "source": [
-    "This function takes as arguments all the vectors you want to combine, and lines them up together as columns in the order you typed them in. This way, you imply that the second item in ```x1``` and the second item in ```x2``` belong to the same observation, since they appear on the same row in the dataframe. This function also gives the variables names based on what the vectors were named; let's rewrite the code above to give ```x1``` and ```x2``` more meaningful variable names."
+    "This function takes as arguments all the vectors you want to combine, and lines them up together as columns in the order you typed them in. This way, you imply that the second item in ```x1``` and the second item in ```x2``` belong to the same observation, since they appear on the same row in the dataframe. This function also gives the variables names based on what the vectors were named. Let's rewrite the code above to give ```x1``` and ```x2``` more meaningful variable names:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f8c5994d",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.frame: 5 × 2</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>user_id</th><th scope=col>age</th></tr>\n",
+       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>1</td><td>18</td></tr>\n",
+       "\t<tr><td>2</td><td>21</td></tr>\n",
+       "\t<tr><td>3</td><td>20</td></tr>\n",
+       "\t<tr><td>4</td><td>23</td></tr>\n",
+       "\t<tr><td>5</td><td>20</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.frame: 5 × 2\n",
+       "\\begin{tabular}{ll}\n",
+       " user\\_id & age\\\\\n",
+       " <dbl> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t 1 & 18\\\\\n",
+       "\t 2 & 21\\\\\n",
+       "\t 3 & 20\\\\\n",
+       "\t 4 & 23\\\\\n",
+       "\t 5 & 20\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.frame: 5 × 2\n",
+       "\n",
+       "| user_id &lt;dbl&gt; | age &lt;dbl&gt; |\n",
+       "|---|---|\n",
+       "| 1 | 18 |\n",
+       "| 2 | 21 |\n",
+       "| 3 | 20 |\n",
+       "| 4 | 23 |\n",
+       "| 5 | 20 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  user_id age\n",
+       "1 1       18 \n",
+       "2 2       21 \n",
+       "3 3       20 \n",
+       "4 4       23 \n",
+       "5 5       20 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "data.frame(user_id = x1, age = x2)"
+    "data.frame(user_id = x1, age = x2)\n",
+    "\n",
+    "#What do you think the <dbl> line in the data frame means? Try googling for an answer! "
    ]
   },
   {
@@ -80,10 +198,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "511b5aa9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in data.frame(user_id = x1, age = x2): arguments imply differing number of rows: 5, 4\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in data.frame(user_id = x1, age = x2): arguments imply differing number of rows: 5, 4\nTraceback:\n",
+      "1. data.frame(user_id = x1, age = x2)",
+      "2. stop(gettextf(\"arguments imply differing number of rows: %s\", \n .     paste(unique(nrows), collapse = \", \")), domain = NA)"
+     ]
+    }
+   ],
    "source": [
     "x1 <- c(1,2,3,4,5)\n",
     "x2 <- c(18,21,20,23)\n",
@@ -105,19 +234,38 @@
    "source": [
     "### Importing existing data\n",
     "\n",
-    "The vast majority of the time in data analysis, you are not manually creating vectors and dataframes. Instead, you are importing an existing file of data. So for the rest of this chapter we're going to practice working with and understanding an example dataset from a study by Crum & Langer (2007) called [Mindset Matters](https://search.r-project.org/CRAN/refmans/Lock5Data/html/MindsetMatters.html), on how the placebo effect works with exercise. In this study, 75 hotel housekeepers were either told that their daily work accounted for all the daily exercise they need, or were told nothing. \n",
+    "The vast majority of the time in data analysis, you are not manually creating vectors and dataframes. Instead, you are importing an existing file of data. So for the rest of this chapter we're going to practice working with and understanding an example dataset from a study by [James et al. (2015)](https://journals.sagepub.com/stoken/default+domain/hQ2W4fbPrZVJ7eyNJaqu/full), on how playing Tetris may limit intrusive traumatic memories. In this study, 72 participants watched a traumatic video and were then put into one of four experimental conditions designed to test how often intrusive memories happened.\n",
     "\n",
-    "You may have experience opening datasets in programs like Excel with an .xlsx extension. The extension tells you what kind of file format it is - .xlsx, for example, is an excel file. There are many file formats data can be saved in that are more or less easy to open in various software. Our Mindset Matters data is saved as a .csv, meaning a \"comma-separated value\" format, as this is really easy for computer programs to parse. If you were to open this file in a basic text editor program, you'd see rows are separated on different lines, and columns are separated by commas. In R, the ```readr``` package can understand this format and create a rectangle dataframe for us. \n",
+    "You may have experience opening datasets in programs like Excel with an .xlsx extension. The extension tells you what kind of file format it is - .xlsx, for example, is an excel file. There are many file formats data can be saved in that are more or less easy to open in various software. Our Tetris Memories data is saved as a .csv, meaning a \"comma-separated value\" format, as this is really easy for computer programs to parse. If you were to open this file in a basic text editor program, you'd see rows are separated on different lines, and columns are separated by commas. In R, the ```readr``` package can understand this format and create a rectangle dataframe for us. \n",
     "\n",
     "```readr``` is not a default package in R - it has to be downloaded the first time you use it, and then loaded every time you start a new R session. Edit the code below to install the ```readr``` package and load it into your R environment."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "8f41ad3a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Installing package into ‘/Library/Frameworks/R.framework/Versions/4.2-arm64’\n",
+      "(as ‘lib’ is unspecified)\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The downloaded binary packages are in\n",
+      "\t/var/folders/mg/1wy1xcls587_h0tqnj42l5740000gn/T//RtmpbFWRCF/downloaded_packages\n"
+     ]
+    }
+   ],
    "source": [
     "# finish the code below to install readr\n",
     "install.packages(\"   \")\n",
@@ -136,10 +284,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "0c26c8c5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "'/Users/shannonburns/Desktop/Pomona/Classes/Stats/Psyc158'"
+      ],
+      "text/latex": [
+       "'/Users/shannonburns/Desktop/Pomona/Classes/Stats/Psyc158'"
+      ],
+      "text/markdown": [
+       "'/Users/shannonburns/Desktop/Pomona/Classes/Stats/Psyc158'"
+      ],
+      "text/plain": [
+       "[1] \"/Users/shannonburns/Desktop/Pomona/Classes/Stats/Psyc158\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "getwd()"
    ]
@@ -802,7 +969,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.1.2"
+   "version": "4.2.3"
   }
  },
  "nbformat": 4,
